<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">熱量記事本</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="title_activity_browse_database">BrowseDatabaseActivity</string>
    <string name="title_activity_basic_info">BasicInfoActivity</string>
    <string name="title_activity_edit_weight">EditWeightActivity</string>
    <string name="calendar_add_event">新增事件</string>
    <string name="add_event_title">新增事件</string>
    <string name="add_event_ok">新增成功</string>
    <string name="add_basic_ok">新增成功</string>
    <string name="add_weight_ok">新增成功</string>
    <string name="add_event_empty_field">不允許有空的欄位</string>
    <string name="basic_info_empty_field">不允許有空的欄位</string>
    <string name="edit_weight_empty_field">不允許有空的欄位</string>
    <string name="date_inconsistent">日期欄位不符合規定</string>
    <string name="add_to_db">加入資料庫</string>
    <string name="food">食物 :</string>
    <string name="date">日期 :</string>
    <string name="cal">熱量 :</string>
    <string name="num">份量 :</string>
    <string name="clazz">分類 :</string>
    <string name="done">完成</string>
    <string name="cancel">取消</string>
    <string name="message">訊息</string>
    <string name="ok">OK</string>
    <string name="select">選擇</string>
    <string name="delete">刪除</string>
    <string name="statistics">統計</string>
    <string name="browse">...</string>
    <string name="database_count">資料庫數量 : </string>
    <string name="today_event">今天 :</string>
    <string name="database">資料庫</string>
    <string name="basic_info">基本資料</string>
    <string name="add">新增</string>
    <string name="week_month">週/月</string>
    <string name="basic_info_title">基本資料</string>
    <string name="start_weight">初始體重</string>
    <string name="start_date">初始日期</string>
    <string name="end_weight">目標體重</string>
    <string name="end_date">達成日期</string>
    <string name="today_weight">今日體重</string>
    <string name="date_">日期</string>
    <string name="weight">體重</string>
    <string name="select_date_tip">選擇一個日期</string>

</resources>
