<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="user.d802p.AddEventActivity">

    <TextView
        android:id="@+id/add_event_title_text"
        android:text="@string/add_event_title"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/date_text"
        android:text="@string/date"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_event_title_text" />

    <EditText
        android:id="@+id/date_value"
        android:text=""
        android:ems="10"
        android:textSize="25sp"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/date_text"
        android:layout_toRightOf="@+id/date_text" />

    <TextView
        android:id="@+id/food_text"
        android:text="@string/food"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_text" />

    <EditText
        android:id="@+id/food_value"
        android:text=""
        android:ems="10"
        android:textSize="25sp"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/food_text"
        android:layout_toRightOf="@+id/food_text" />

    <TextView
        android:id="@+id/cal_text"
        android:text="@string/cal"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_text" />

    <EditText
        android:id="@+id/cal_value"
        android:text=""
        android:inputType="number"
        android:ems="10"
        android:textSize="25sp"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/cal_text"
        android:layout_toRightOf="@+id/cal_text" />

    <TextView
        android:id="@+id/num_text"
        android:text="@string/num"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cal_text" />

    <EditText
        android:id="@+id/num_value"
        android:text=""
        android:inputType="number"
        android:ems="10"
        android:textSize="25sp"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/num_text"
        android:layout_toRightOf="@+id/num_text" />

    <TextView
        android:id="@+id/clazz_text"
        android:text="@string/clazz"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/num_text" />

    <EditText
        android:id="@+id/clazz_value"
        android:text=""
        android:ems="10"
        android:textSize="25sp"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/clazz_text"
        android:layout_toRightOf="@+id/clazz_text" />

    <CheckBox
        android:id="@+id/add_to_db_text"
        android:text="@string/add_to_db"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/clazz_text" />

    <Button
        android:id="@+id/browse_db"
        android:text="@string/browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/add_to_db_text"
        android:layout_toRightOf="@+id/add_to_db_text" />

    <Button
        android:id="@+id/add_event_done"
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/add_to_db_text" />

    <Button
        android:id="@+id/add_event_cancel"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/add_event_done"
        android:layout_toRightOf="@+id/add_event_done" />

</RelativeLayout>
