<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="user.d802p.BasicInfoActivity">

    <TextView
        android:id="@+id/basic_info_title_text"
        android:text="@string/basic_info_title"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/start_weight_text"
        android:text="@string/start_weight"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/basic_info_title_text" />

    <EditText
        android:id="@+id/start_weight_value"
        android:text=""
        android:inputType="number"
        android:ems="6"
        android:textSize="25sp"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/start_weight_text"
        android:layout_toRightOf="@+id/start_weight_text" />

    <TextView
        android:id="@+id/start_date_text"
        android:text="@string/start_date"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_weight_text" />

    <EditText
        android:id="@+id/start_date_value"
        android:text=""
        android:ems="6"
        android:textSize="25sp"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/start_date_text"
        android:layout_toRightOf="@+id/start_date_text" />

    <Button
        android:id="@+id/select_start_date"
        android:text="@string/browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/start_date_value"
        android:layout_toRightOf="@+id/start_date_value" />

    <TextView
        android:id="@+id/end_weight_text"
        android:text="@string/end_weight"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/start_date_text" />

    <EditText
        android:id="@+id/end_weight_value"
        android:text=""
        android:inputType="number"
        android:ems="6"
        android:textSize="25sp"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/end_weight_text"
        android:layout_toRightOf="@+id/end_weight_text" />

    <TextView
        android:id="@+id/end_date_text"
        android:text="@string/end_date"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/end_weight_text" />

    <EditText
        android:id="@+id/end_date_value"
        android:text=""
        android:ems="6"
        android:textSize="25sp"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/end_date_text"
        android:layout_toRightOf="@+id/end_date_text" />

    <Button
        android:id="@+id/select_end_date"
        android:text="@string/browse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/end_date_value"
        android:layout_toRightOf="@+id/end_date_value" />

    <Button
        android:id="@+id/edit_info_done"
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/end_date_text" />

    <Button
        android:id="@+id/edit_info_cancel"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/edit_info_done"
        android:layout_toRightOf="@+id/edit_info_done" />

</RelativeLayout>
