<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="user.d802p.EditWeightActivity">

    <TextView
        android:id="@+id/edit_weight_title_text"
        android:text="@string/today_weight"
        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/date_text"
        android:text="@string/date_"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_weight_title_text" />

    <EditText
        android:id="@+id/date_value"
        android:text=""
        android:ems="10"
        android:textSize="25sp"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/date_text"
        android:layout_toRightOf="@+id/date_text" />

    <TextView
        android:id="@+id/weight_text"
        android:text="@string/weight"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_text" />

    <EditText
        android:id="@+id/weight_value"
        android:text=""
        android:inputType="number"
        android:ems="10"
        android:textSize="25sp"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/weight_text"
        android:layout_toRightOf="@+id/weight_text" />

    <Button
        android:id="@+id/edit_weight_done"
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/weight_text" />

    <Button
        android:id="@+id/edit_weight_cancel"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_alignTop="@+id/edit_weight_done"
        android:layout_toRightOf="@+id/edit_weight_done" />

</RelativeLayout>
